# Python_Tasks_Project

./: README.md  pyproject.toml  task_10.py  task_11.py  task_12.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_9.py
Chapter 1,2 (Primitive data types)/: task_1.py  task_10.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Chapter 16 (Python OOP)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Chapter 19 (Python higher-order functions)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
Chapter 24 (Python files management)/: log.txt  sample2.txt  task_1.py  task_2.py  task_3.py  task_4.py  user_info.txt
Chapter 26 (Python comprehensions)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
Chapter 3 (Control flows and logical operator)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
Chapter 4 (Python Lists and Tuples)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
Chapter 5 (Python loops)/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py
Chapter 6, 7, 8, 10 (Python functions)/: task_1.py  task_2.py
Chapter 9 (Python dictionary)/: task_1.py  task_2.py  task_3.py  task_4.py
