[tool.poetry]
name = "chapter-6-7-8-10-python-functions-"
version = "0.1.0"
description = ""
authors = ["A-Lastovets <164244571+A-Lastovets@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
